@startuml spriteRenderer

class Sprite {
  - imageAsset
  - x
  - y
  - width
  - height
  - region

  + Sprite(src, {x = 0, y = 0, width = 0, height = 0, region = null} = {})
  + assingImageAsset(src)
  + get x()
  - set x(xPos)
  + get y()
  - set y(yPos)
  + get image()
  + get isLoaded()
  + async waitForLoad()
  + get width()
  + set width()
  + get height()
  + set height()
  + get region()
  + set region()
}

class SpriteRenderer {
  - canvas
  - context
  - sprites
  - frame
  
  + SpriteRenderer(canvas)
  - setContext()
  + add(sprite)
  + remove(sprite)
  + clear()
  - clearCanvas()
  - renderWhenLoaded(sprite)
  - scheduleRender()
  + render()
  - drawSprite(sprite)
  - drawRegion(sprite)
  - drawWhole(sprite)
}

class ImageAsset {
  - {static} cache
  - image
  - isLoaded
  - loaded

  + ImageAsset(src)
  + {static} getAsset(src)
  - {static} createAsset(src)
  - createLoadPromise(src)
  - handleLoad(resolve)
  - setImageSource(src)
  + get image()
  + get isLoaded()
  + async waitForLoad()
}

class SpriteRegion {
  - x
  - y
  - width
  - height

  + SpriteRegion({x = 0, y = 0, width = 0, height = 0} = {})
  + get x()
  + set x()
  + get y()
  + set y()
  + get width()
  + set width()
  + get height()
  + set height()
}

class SpriteAnimation {
  - frames
  - frameDuration
  - currentFrame
  - elaspedTime

  + SpriteAnimation(frames, frameDuration)
  + update(deltaTime)
  - resetCurrentFrame()
  + get region()
}


SpriteRenderer "1" --> "*" Sprite : uses
Sprite "*" --> "1" ImageAsset : uses
Sprite "1" o-- "0..1" SpriteRegion : has
SpriteAnimation "1" --> "*" SpriteRegion : has frames

@enduml